; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_zcache.c_zcache_mag_depot_swap_for_alloc.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_zcache.c_zcache_mag_depot_swap_for_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zone_cache = type { i64, i32* }
%struct.zcc_per_cpu_cache = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @zcache_mag_depot_swap_for_alloc(%struct.zone_cache* %0, %struct.zcc_per_cpu_cache* %1) #0 {
  %3 = alloca %struct.zone_cache*, align 8
  %4 = alloca %struct.zcc_per_cpu_cache*, align 8
  store %struct.zone_cache* %0, %struct.zone_cache** %3, align 8
  store %struct.zcc_per_cpu_cache* %1, %struct.zcc_per_cpu_cache** %4, align 8
  %5 = load %struct.zone_cache*, %struct.zone_cache** %3, align 8
  %6 = call i32 @zcache_depot_available(%struct.zone_cache* %5)
  %7 = call i32 @assert(i32 %6)
  %8 = load %struct.zone_cache*, %struct.zone_cache** %3, align 8
  %9 = getelementptr inbounds %struct.zone_cache, %struct.zone_cache* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ugt i64 %10, 0
  %12 = zext i1 %11 to i32
  %13 = call i32 @assert(i32 %12)
  %14 = load %struct.zone_cache*, %struct.zone_cache** %3, align 8
  %15 = getelementptr inbounds %struct.zone_cache, %struct.zone_cache* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = add i64 %16, -1
  store i64 %17, i64* %15, align 8
  %18 = load %struct.zcc_per_cpu_cache*, %struct.zcc_per_cpu_cache** %4, align 8
  %19 = getelementptr inbounds %struct.zcc_per_cpu_cache, %struct.zcc_per_cpu_cache* %18, i32 0, i32 0
  %20 = load %struct.zone_cache*, %struct.zone_cache** %3, align 8
  %21 = getelementptr inbounds %struct.zone_cache, %struct.zone_cache* %20, i32 0, i32 1
  %22 = load i32*, i32** %21, align 8
  %23 = load %struct.zone_cache*, %struct.zone_cache** %3, align 8
  %24 = getelementptr inbounds %struct.zone_cache, %struct.zone_cache* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = getelementptr inbounds i32, i32* %22, i64 %25
  %27 = call i32 @zcache_swap_magazines(i32* %19, i32* %26)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @zcache_depot_available(%struct.zone_cache*) #1

declare dso_local i32 @zcache_swap_magazines(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
